# duckagent

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yml  release.yml
benchmark/: README.md  context_policy_benchmark.py  model_matrix.py  models_dev_profile.py  recoverable_policy_sweep.py  report_utils.py  test_context_policy_benchmark.py
benchmark/pricing/: anthropic-claude-sonnet-4.json  deepseek-chat.json  deepseek-v4-flash.json  deepseek-v4-pro-promo.json  deepseek-v4-pro-regular.json  default.json  kimi-k2.6.json  openai-gpt-5.4-mini.json  openai-gpt-5.4.json  openai-gpt-5.5.json
benchmark/workloads/: default.json
docs/: agent-orchestration.md  astro.config.mjs  context-policy-benchmark.md  gateway-channel-matrix.md  gateway-channel-tasks.md  gateway.md  package.json  pnpm-lock.yaml  profiles.md  runtime-capabilities.md  sandbox.md  tui.md
scripts/: install.ps1  install.sh
src/: agent.rs  approval.rs  audit.rs  auth.rs  character_card.rs  client.rs  context_projection.rs  input.rs  instructions.rs  main.rs  memory.rs  model.rs  model_config.rs  model_manager.rs  process_manager.rs  profile_manager.rs  profiles.rs  session.rs  session_control.rs  setup.rs  skills.rs  tools.rs  tui.rs  utils.rs
src/capabilities/: registry.rs
src/client/: anthropic.rs  bedrock.rs  codex.rs  copilot_acp.rs  gemini.rs  gemini_cloudcode.rs  openai_compat.rs  sse.rs  types.rs
src/cron/: mod.rs  schedule.rs  service.rs  store.rs  types.rs
src/default/: SOUL.md
src/gateway/: access.rs  config.rs  mod.rs  outbox.rs  pairing.rs  service.rs  setup.rs  types.rs
src/markdown/: code.rs  mod.rs  render.rs  stream.rs  table.rs
src/mcp/: auth_store.rs  cli.rs  config.rs  mod.rs  oauth.rs  result.rs  transport_http.rs  transport_stdio.rs
src/prompts/: active-memory-catalog.md  active-memory-empty.md  active-memory-item.md  agent-loop-end.md  context-completed-loop-summary.md  context-tool-result-summary.md  dynamic-context-block.md  goal-continuation.md  main-capability-builtin-item.md  main-capability-index.md  main-capability-mcp-empty.md  main-capability-mcp-item.md  main-user-message-with-context.md  memory-agent-user-message.md  memory.md  runtime-policy-blocked.md  sandbox-filesystem-access-denied.md  sandbox-filesystem-access-error.md  sandbox-filesystem-access-granted.md  sandbox-filesystem-access-invalid.md  session-title-system.md  system-prompt.md  tool-result-with-context.md  vision-analyze-instructions.md
src/provider/: config.rs  (+2 more)
(+147 files in other folders)
