[package]
name = "duckagent"
version = "0.1.3"
edition = "2024"
autobins = false

[[bin]]
name = "duck"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aes = "0.8"
cbc = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
nostr-sdk = { version = "0.44", default-features = false, features = ["nip04", "nip59"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
flate2 = "1.0"
schemars = "1.0"
unicode-width = "0.1"
uuid = { version = "1.18", features = ["serde", "v7"] }
tiktoken-rs = "0.7"
regex = "1.12"
shlex = "1.3"
brush-parser = "0.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "avif"] }
pulldown-cmark = "0.12"
syntect = "5"
portable-pty = "0.9"
sha2 = "0.10"
sha1 = "0.10"
url = "2.5"
ignore = "0.4"
globset = "0.4"
ipnet = "2.12"
rand = "0.9"
qrcode = { version = "0.14", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pki-types = "1.14"
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
webpki-roots = "0.26"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_Registry",
    "Win32_System_Rpc",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Com",
    "Win32_System_Variant",
]

[dev-dependencies]
tempfile = "3.20"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
